<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_button"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:text="@string/Register_screen"
        android:textSize="32sp"
        android:textColor="#4356B4"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFullName"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="21dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailRegis"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_below="@+id/txtFullName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordRegis"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmailRegis"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPasswordRegis"
        style="@style/CustomCheckbox"
        android:text="  Tôi đồng ý với các điều khoản"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        android:textColor="#999999"
        android:layout_marginTop="10dp"
        android:layout_marginStart="27dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkboxLegal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:text="@string/Register_screen"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:layout_below="@+id/btnRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đã tài khoản? "
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnLoginReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng nhập ngay"
            android:clickable="true"
            android:textColor="#4356B4"
            android:textSize="14sp"
            android:focusable="true" />
    </LinearLayout>
</RelativeLayout>