<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="500dp"
        android:background="@drawable/background_splash"
        android:id="@+id/background_personal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_container">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_profile"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_avatar" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/avatar_profile"
            android:text="@string/fullname"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_profile_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/avatar_profile"
            android:text="@string/email"
            android:textColor="#999999"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/btn_update_profile"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_pencil" />

        <View
            android:id="@+id/break_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="130dp"
            android:background="#EFEEEE" />

        <RelativeLayout
            android:id="@+id/block_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/break_line">

            <ImageView
                android:id="@+id/ic_language"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_global" />

            <TextView
                android:id="@+id/tv_language_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/ic_language"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ic_more_language"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next" />

            <TextView
                android:id="@+id/tv_language_choosing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/ic_more_language"
                android:text="@string/vietnamese"
                android:textColor="#4356B4"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:id="@+id/small_break_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/block_language"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="58dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:background="#D2D2D2" />

        <RelativeLayout
            android:id="@+id/block_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/small_break_line_1">

            <ImageView
                android:id="@+id/ic_notification"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_megaphone" />

            <TextView
                android:id="@+id/tv_notification_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/ic_notification"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ic_more_notification"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_next" />

        </RelativeLayout>

        <View
            android:id="@+id/small_break_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/block_notification"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="58dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:background="#D2D2D2" />

        <RelativeLayout
            android:id="@+id/block_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/small_break_line_2">

            <ImageView
                android:id="@+id/ic_version"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_reuse" />

            <TextView
                android:id="@+id/tv_version_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@id/ic_version"
                android:text="@string/version"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_version_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="12dp"
                android:text="1.0.0"
                android:textColor="#999999"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:id="@+id/break_line_2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/block_version"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:background="#EFEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/break_line_2">

            <ImageView
                android:id="@+id/ic_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="25dp"
                android:layout_toEndOf="@id/ic_logout"
                android:text="@string/logout"
                android:textColor="#C92323"
                android:textSize="18sp" />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>