<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo_2" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/LoginWelcome"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/LoginScreen"
        android:textColor="#4356B4"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/screen_title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        app:endIconDrawable="@drawable/ic_mail"
        app:errorEnabled="true"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:screenReaderFocusable="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="23dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_key"
        app:errorEnabled="true"
        android:layout_marginRight="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:screenReaderFocusable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btnForgot"
        android:layout_width="103dp"
        android:layout_height="17dp"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="265dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:gravity="right|top"
        android:text="Quên mật khẩu?"
        android:textColor="#4356B4"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnForgot"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button"
        android:screenReaderFocusable="true"
        android:enabled="false"
        android:text="@string/LoginScreen"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="Chưa có tài khoản? "
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnRegisterLogin"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Đăng ký ngay"
            android:textColor="#4356B4"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>